src/app/components/animated-sticker/animated-sticker.component.scss
*,
*:before,
*:after {
  box-sizing: border-box;
  position: relative;
}

* {
  transform-style: preserve-3d;
}

.root-element {
  --duration: 10s;
  --stagger: 2s;
  --easing: cubic-bezier(0.36, 0.07, 0.25, 1);
  --offscreen: 130vmax;
  //cubic-bezier(.5, 0, .4, 1);
  --color-bg: #ef735a;
  --color-blue: #384969;
  --color-shadow: #211842;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;

  width: 100%;
  overflow: hidden;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--color-bg);
}

#app {
  height: 19vmin;
  width: 90vmin;
  max-width: 800px;
  max-height: 230px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  transform: rotateX(-20deg) rotateY(-55deg);
  background: var(--color-blue);
  border-radius: 2vmin;
  perspective: 10000px;

  &:before {
    border: 2vmin solid white;
    background: white;
    border-left-width: 2vmin;
    border-right-width: 2vmin;
    border-radius: inherit;
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    border-left-width: 2vmin;
    border-right-width: 2vmin;
  }

  > .papers,
  &:before {
    transform: translateZ(3vmin);
  }

  &:after {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: inherit;
    border-radius: inherit;
    transform: translateZ(1.5vmin);
  }
}
@media screen and (max-width: 1024px) {
  #app {
    &:before {
      border-radius: 2vmin;
    }
  }
}

.papers {
  width: 60vmin;
  height: 19vmin;
  background: white;
  max-width: 700px;
  max-height: 230px;
  > .stickerID {
    position: absolute;
    bottom: 10px;
    left: -55px;
    background: inherit;
    font-weight: 600;
    height: 20%;
    width: 20%;
    font-size: 32px;
    color: red;
    &:before {
      position: absolute;
      transform: translateZ(3vmin);
    }
    &:after {
      position: absolute;
      top: 0;
      left: 0;
      transform: translateZ(1.5vmin);
    }
  }
  > .nfcChip {
    margin: auto;

    top: 25%;
    font-weight: 600;
    height: 50%;
    width: 20%;

    background-image: url("../../../assets/images/nfc-chip.png");
    background-repeat: no-repeat;
    background-size: contain;
    &:before {
      position: absolute;
      transform: translateZ(3vmin);
    }
    &:after {
      position: absolute;
      top: 0;
      left: 0;
      transform: translateZ(1.5vmin);
    }
  }
}

.paper {
  --segments: 5;
  --segment: calc(100% / var(--segments));
  position: absolute;
  top: 0;
  left: 0;
  transform: translateZ(-0.01vmin);

  height: 100%;
  width: 100%;
  animation: fly-in var(--duration) var(--easing) infinite;
  animation-delay: calc((var(--i) * var(--stagger)));

  @keyframes fly-in {
    0%,
    2% {
      transform: translateZ(var(--offscreen)) translateY(80%) rotateX(30deg);
    }
    80%,
    100% {
      transform: translateZ(0px) translateY(0%) rotateX(0deg);
    }
  }

  > .segment {
    height: var(--segment);
  }
}

.segment {
  --rotate: 20deg;
  height: 100%;
  transform-origin: top center;
  background: white;

  border-top: none;
  border-bottom: none;
  background-size: contain;
  background-repeat: no-repeat;

  > .segment {
    top: 94%;
  }
  //Våra erbjudanden header
  &.i-0 {
    background-image: url("../../../assets/images/sticker_fragment_9.png");
  }
  &.i-1 {
    background-image: url("../../../assets/images/sticker_fragment_6.png");
  }
  //Veckans middagstips header
  &.i-2 {
    background-image: url("../../../assets/images/sticker_fragment_7.png");
  }
  &.i-3 {
    background-image: url("../../../assets/images/sticker_fragment_8.png");
  }
  //Frukt o grönt header
  &.i-4 {
    background-image: url("../../../assets/images/sticker_fragment_2.png");
  }
  &.i-5 {
    background-image: url("../../../assets/images/sticker_fragment_3.png");
  }
  //Body pieces
  &.i-6 {
    background-image: url("../../../assets/images/sticker_fragment_4.png");
  }
  &.i-7 {
    background-image: url("../../../assets/images/sticker_fragment_1.png");
  }
  &.i-8 {
    background-image: url("../../../assets/images/sticker_fragment_5.png");
  }

  animation: inherit;
  animation-name: curve-paper;

  @keyframes curve-paper {
    0%,
    2% {
      transform: rotateX(var(--rotate, 0deg));
    }
    90%,
    100% {
      transform: rotateX(0deg);
    }
  }
}

/* ---------------------------------- */

.paper.-rogue {
  transform-origin: top center -5vmin;

  .segment {
    --rotate: 30deg;
    animation-name: curve-rogue-paper;

    @keyframes curve-rogue-paper {
      0%,
      50% {
        transform: rotateX(var(--rotate));
      }
      100% {
        transform: rotateX(0deg);
      }
    }
  }

  // First segment of the paper
  > .segment {
    animation: inherit;
    animation-name: rogue-paper;
    transform-origin: left top 20vmin;

    @keyframes rogue-paper {
      0%,
      2% {
        transform: rotateX(1.5turn);
      }
      80%,
      100% {
        transform: rotateX(0turn);
      }
    }
  }
}

